# RepoRAG

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
.github/workflows/: ci.yml
src/code_navigator/: __init__.py  types.py
src/code_navigator/cli/: main.py
src/code_navigator/indexing/: __init__.py  store.py
src/code_navigator/ingestion/: __init__.py  walker.py
src/code_navigator/llm/: __init__.py  diagram.py  ollama_client.py  prompts.py
src/code_navigator/parsing/: __init__.py  python_chunks.py
src/code_navigator/retrieval/: __init__.py  search.py
src/reporag/: __init__.py  config.py  constants.py  types.py
src/reporag/cli/: main.py
src/reporag/indexing/: __init__.py  store.py
src/reporag/ingestion/: __init__.py  walker.py
src/reporag/llm/: __init__.py  diagram.py  ollama_client.py  prompts.py  retry.py
src/reporag/llm/backends/: __init__.py  base.py  factory.py  ollama.py  openai_compat.py
src/reporag/parsing/: __init__.py  base.py  go_chunks.py  javascript_chunks.py  python_chunks.py  registry.py  rust_chunks.py  text_chunks.py  typescript_chunks.py
src/reporag/retrieval/: __init__.py  context_files.py  graph.py  reranking.py  search.py
tests/: test_context_files.py  test_diagram.py  test_indexing.py  test_ingestion.py  test_integration_ollama.py  test_language_parsers.py  test_ollama_client.py  test_openai_compat.py  test_parsing.py  test_prompts.py  test_reranking.py  test_retrieval.py  test_retry.py  test_validate_model.py
tests/fixtures/: broken.py  sample.go  sample.js  sample.rs  sample.ts  sample.tsx  sample_ok.py
