[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reporag"
version = "0.2.0"
description = "Local-first semantic codebase navigator with multi-language RAG support (Ollama/OpenAI-Compatible Provider + SQLite)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "numpy>=1.26",
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-rust>=0.23",
  "typer>=0.12",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "ruff>=0.6"]

[project.scripts]
reporag = "reporag.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fixtures/broken.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
